// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileTree with data 1`] = `
<div
  className="filetree-container"
>
  <ul
    className="css-utoqxu"
  >
    <li
      className="css-79elbk"
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "borderRadius": "5px",
            "cursor": "pointer",
            "display": "flex",
            "padding": "0px 5px",
            "position": "relative",
          }
        }
      >
        <div
          className="css-1abq8k5"
        >
          <div
            className="css-pnahsx"
          >
            <svg
              height={10}
              width={10}
            >
              <polygon
                className="css-l0fi0l"
                points="0,0 0,10 10,5"
              />
            </svg>
          </div>
        </div>
        <span
          className="filetree-checkbox-container active"
        >
          <div
            className="checkbox"
          >
            <label
              title=""
            >
              <input
                checked={false}
                disabled={false}
                id="filetree-check-root"
                onChange={[Function]}
                onClick={[Function]}
                type="checkbox"
              />
            </label>
          </div>
          <div
            style={
              Object {
                "color": "#777",
                "display": "inline-block",
                "verticalAlign": "top",
              }
            }
          >
            <div>
              <div
                className="filetree-resource-row"
                style={
                  Object {
                    "lineHeight": "24px",
                    "verticalAlign": "middle",
                  }
                }
                title="root"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-folder-open fa-w-18 filetree-folder-icon"
                  data-icon="folder-open"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M572.694 292.093L500.27 416.248A63.997 63.997 0 0 1 444.989 448H45.025c-18.523 0-30.064-20.093-20.731-36.093l72.424-124.155A64 64 0 0 1 152 256h399.964c18.523 0 30.064 20.093 20.73 36.093zM152 224h328v-48c0-26.51-21.49-48-48-48H272l-64-64H48C21.49 64 0 85.49 0 112v278.046l69.077-118.418C86.214 242.25 117.989 224 152 224z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
                <div
                  className="filetree-directory-name"
                >
                  root
                </div>
              </div>
            </div>
          </div>
        </span>
      </div>
      <div>
        <ul
          className="css-1s1o8u8"
        >
          <li
            className="css-79elbk"
          >
            <div
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "display": "flex",
                  "padding": "0px 5px",
                  "position": "relative",
                }
              }
            >
              <div
                className="css-1abq8k5"
              >
                <div
                  className="css-pnahsx"
                >
                  <svg
                    height={10}
                    width={10}
                  >
                    <polygon
                      className="css-l0fi0l"
                      points="0,0 0,10 10,5"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="filetree-checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label
                    title=""
                  >
                    <input
                      checked={false}
                      disabled={false}
                      id="filetree-check-root|parent1"
                      onChange={[Function]}
                      onClick={[Function]}
                      type="checkbox"
                    />
                  </label>
                </div>
                <div
                  style={
                    Object {
                      "color": "#777",
                      "display": "inline-block",
                      "verticalAlign": "top",
                    }
                  }
                >
                  <div>
                    <div
                      className="filetree-resource-row"
                      style={
                        Object {
                          "lineHeight": "24px",
                          "verticalAlign": "middle",
                        }
                      }
                      title="parent1"
                    >
                      <svg
                        aria-hidden="true"
                        className="svg-inline--fa fa-folder fa-w-16 filetree-folder-icon"
                        data-icon="folder"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        style={Object {}}
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M464 128H272l-64-64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V176c0-26.51-21.49-48-48-48z"
                          fill="currentColor"
                          style={Object {}}
                        />
                      </svg>
                      <div
                        className="filetree-directory-name"
                      >
                        parent1
                      </div>
                    </div>
                  </div>
                </div>
              </span>
            </div>
            <div />
          </li>
          <li
            className="css-79elbk"
          >
            <div
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "display": "flex",
                  "padding": "0px 5px",
                  "position": "relative",
                }
              }
            >
              <div
                className="css-1abq8k5"
              >
                <div
                  className="css-pnahsx"
                >
                  <svg
                    height={10}
                    width={10}
                  >
                    <polygon
                      className="css-l0fi0l"
                      points="0,0 0,10 10,5"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="filetree-checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label
                    title=""
                  >
                    <input
                      checked={false}
                      disabled={false}
                      id="filetree-check-root|loading parent"
                      onChange={[Function]}
                      onClick={[Function]}
                      type="checkbox"
                    />
                  </label>
                </div>
                <div
                  style={
                    Object {
                      "color": "#777",
                      "display": "inline-block",
                      "verticalAlign": "top",
                    }
                  }
                >
                  <div>
                    <div
                      className="filetree-resource-row"
                      style={
                        Object {
                          "lineHeight": "24px",
                          "verticalAlign": "middle",
                        }
                      }
                      title="loading parent"
                    >
                      <svg
                        aria-hidden="true"
                        className="svg-inline--fa fa-folder fa-w-16 filetree-folder-icon"
                        data-icon="folder"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        style={Object {}}
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M464 128H272l-64-64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V176c0-26.51-21.49-48-48-48z"
                          fill="currentColor"
                          style={Object {}}
                        />
                      </svg>
                      <div
                        className="filetree-directory-name"
                      >
                        loading parent
                      </div>
                    </div>
                  </div>
                </div>
              </span>
            </div>
            <div />
          </li>
          <li
            className="css-79elbk"
          >
            <div
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "display": "flex",
                  "padding": "0px 5px",
                  "position": "relative",
                }
              }
            >
              <div
                className="css-1abq8k5"
              >
                <div
                  className="css-pnahsx"
                >
                  <svg
                    height={10}
                    width={10}
                  >
                    <polygon
                      className="css-l0fi0l"
                      points="0,0 0,10 10,5"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="filetree-checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label
                    title=""
                  >
                    <input
                      checked={false}
                      disabled={false}
                      id="filetree-check-root|parent2"
                      onChange={[Function]}
                      onClick={[Function]}
                      type="checkbox"
                    />
                  </label>
                </div>
                <div
                  style={
                    Object {
                      "color": "#777",
                      "display": "inline-block",
                      "verticalAlign": "top",
                    }
                  }
                >
                  <div>
                    <div
                      className="filetree-resource-row"
                      style={
                        Object {
                          "lineHeight": "24px",
                          "verticalAlign": "middle",
                        }
                      }
                      title="parent2"
                    >
                      <svg
                        aria-hidden="true"
                        className="svg-inline--fa fa-folder fa-w-16 filetree-folder-icon"
                        data-icon="folder"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        style={Object {}}
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M464 128H272l-64-64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V176c0-26.51-21.49-48-48-48z"
                          fill="currentColor"
                          style={Object {}}
                        />
                      </svg>
                      <div
                        className="filetree-directory-name"
                      >
                        parent2
                      </div>
                    </div>
                  </div>
                </div>
              </span>
            </div>
            <div />
          </li>
          <li
            className="css-79elbk"
          >
            <div
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "display": "flex",
                  "padding": "0px 5px",
                  "position": "relative",
                }
              }
            >
              <div
                className="css-1abq8k5"
              >
                <div
                  className="css-pnahsx"
                >
                  <svg
                    height={10}
                    width={10}
                  >
                    <polygon
                      className="css-l0fi0l"
                      points="0,0 0,10 10,5"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="filetree-checkbox-container"
              >
                <div
                  className="checkbox"
                >
                  <label
                    title=""
                  >
                    <input
                      checked={false}
                      disabled={false}
                      id="filetree-check-root|empty directory"
                      onChange={[Function]}
                      onClick={[Function]}
                      type="checkbox"
                    />
                  </label>
                </div>
                <div
                  style={
                    Object {
                      "color": "#777",
                      "display": "inline-block",
                      "verticalAlign": "top",
                    }
                  }
                >
                  <div>
                    <div
                      className="filetree-resource-row"
                      style={
                        Object {
                          "lineHeight": "24px",
                          "verticalAlign": "middle",
                        }
                      }
                      title="empty directory"
                    >
                      <svg
                        aria-hidden="true"
                        className="svg-inline--fa fa-folder fa-w-16 filetree-folder-icon"
                        data-icon="folder"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        style={Object {}}
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M464 128H272l-64-64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V176c0-26.51-21.49-48-48-48z"
                          fill="currentColor"
                          style={Object {}}
                        />
                      </svg>
                      <div
                        className="filetree-directory-name"
                      >
                        empty directory
                      </div>
                    </div>
                  </div>
                </div>
              </span>
            </div>
            <div />
          </li>
        </ul>
      </div>
    </li>
  </ul>
</div>
`;

exports[`FileTree with data allowMultiSelect false 1`] = `
<div
  className="filetree-container"
>
  <ul
    className="css-utoqxu"
  >
    <li
      className="css-79elbk"
    >
      <div
        onClick={[Function]}
        style={
          Object {
            "borderRadius": "5px",
            "cursor": "pointer",
            "display": "flex",
            "padding": "0px 5px",
            "position": "relative",
          }
        }
      >
        <div
          className="css-1abq8k5"
        >
          <div
            className="css-pnahsx"
          >
            <svg
              height={10}
              width={10}
            >
              <polygon
                className="css-l0fi0l"
                points="0,0 0,10 10,5"
              />
            </svg>
          </div>
        </div>
        <span
          className="filetree-checkbox-container active"
        >
          <div
            style={
              Object {
                "color": "#777",
                "display": "inline-block",
                "verticalAlign": "top",
              }
            }
          >
            <div
              className="lk-text-theme-dark filetree-node-active"
            >
              <div
                className="filetree-resource-row"
                style={
                  Object {
                    "lineHeight": "24px",
                    "verticalAlign": "middle",
                  }
                }
                title="root"
              >
                <svg
                  aria-hidden="true"
                  className="svg-inline--fa fa-folder-open fa-w-18 filetree-folder-icon"
                  data-icon="folder-open"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  style={Object {}}
                  viewBox="0 0 576 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M572.694 292.093L500.27 416.248A63.997 63.997 0 0 1 444.989 448H45.025c-18.523 0-30.064-20.093-20.731-36.093l72.424-124.155A64 64 0 0 1 152 256h399.964c18.523 0 30.064 20.093 20.73 36.093zM152 224h328v-48c0-26.51-21.49-48-48-48H272l-64-64H48C21.49 64 0 85.49 0 112v278.046l69.077-118.418C86.214 242.25 117.989 224 152 224z"
                    fill="currentColor"
                    style={Object {}}
                  />
                </svg>
                <div
                  className="filetree-directory-name"
                >
                  root
                </div>
              </div>
            </div>
          </div>
        </span>
      </div>
      <div>
        <ul
          className="css-1s1o8u8"
        >
          <li
            className="css-79elbk"
          >
            <div
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "display": "flex",
                  "padding": "0px 5px",
                  "position": "relative",
                }
              }
            >
              <div
                className="css-1abq8k5"
              >
                <div
                  className="css-pnahsx"
                >
                  <svg
                    height={10}
                    width={10}
                  >
                    <polygon
                      className="css-l0fi0l"
                      points="0,0 0,10 10,5"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="filetree-checkbox-container"
              >
                <div
                  style={
                    Object {
                      "color": "#777",
                      "display": "inline-block",
                      "verticalAlign": "top",
                    }
                  }
                >
                  <div>
                    <div
                      className="filetree-resource-row"
                      style={
                        Object {
                          "lineHeight": "24px",
                          "verticalAlign": "middle",
                        }
                      }
                      title="parent1"
                    >
                      <svg
                        aria-hidden="true"
                        className="svg-inline--fa fa-folder fa-w-16 filetree-folder-icon"
                        data-icon="folder"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        style={Object {}}
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M464 128H272l-64-64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V176c0-26.51-21.49-48-48-48z"
                          fill="currentColor"
                          style={Object {}}
                        />
                      </svg>
                      <div
                        className="filetree-directory-name"
                      >
                        parent1
                      </div>
                    </div>
                  </div>
                </div>
              </span>
            </div>
            <div />
          </li>
          <li
            className="css-79elbk"
          >
            <div
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "display": "flex",
                  "padding": "0px 5px",
                  "position": "relative",
                }
              }
            >
              <div
                className="css-1abq8k5"
              >
                <div
                  className="css-pnahsx"
                >
                  <svg
                    height={10}
                    width={10}
                  >
                    <polygon
                      className="css-l0fi0l"
                      points="0,0 0,10 10,5"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="filetree-checkbox-container"
              >
                <div
                  style={
                    Object {
                      "color": "#777",
                      "display": "inline-block",
                      "verticalAlign": "top",
                    }
                  }
                >
                  <div>
                    <div
                      className="filetree-resource-row"
                      style={
                        Object {
                          "lineHeight": "24px",
                          "verticalAlign": "middle",
                        }
                      }
                      title="loading parent"
                    >
                      <svg
                        aria-hidden="true"
                        className="svg-inline--fa fa-folder fa-w-16 filetree-folder-icon"
                        data-icon="folder"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        style={Object {}}
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M464 128H272l-64-64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V176c0-26.51-21.49-48-48-48z"
                          fill="currentColor"
                          style={Object {}}
                        />
                      </svg>
                      <div
                        className="filetree-directory-name"
                      >
                        loading parent
                      </div>
                    </div>
                  </div>
                </div>
              </span>
            </div>
            <div />
          </li>
          <li
            className="css-79elbk"
          >
            <div
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "display": "flex",
                  "padding": "0px 5px",
                  "position": "relative",
                }
              }
            >
              <div
                className="css-1abq8k5"
              >
                <div
                  className="css-pnahsx"
                >
                  <svg
                    height={10}
                    width={10}
                  >
                    <polygon
                      className="css-l0fi0l"
                      points="0,0 0,10 10,5"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="filetree-checkbox-container"
              >
                <div
                  style={
                    Object {
                      "color": "#777",
                      "display": "inline-block",
                      "verticalAlign": "top",
                    }
                  }
                >
                  <div>
                    <div
                      className="filetree-resource-row"
                      style={
                        Object {
                          "lineHeight": "24px",
                          "verticalAlign": "middle",
                        }
                      }
                      title="parent2"
                    >
                      <svg
                        aria-hidden="true"
                        className="svg-inline--fa fa-folder fa-w-16 filetree-folder-icon"
                        data-icon="folder"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        style={Object {}}
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M464 128H272l-64-64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V176c0-26.51-21.49-48-48-48z"
                          fill="currentColor"
                          style={Object {}}
                        />
                      </svg>
                      <div
                        className="filetree-directory-name"
                      >
                        parent2
                      </div>
                    </div>
                  </div>
                </div>
              </span>
            </div>
            <div />
          </li>
          <li
            className="css-79elbk"
          >
            <div
              onClick={[Function]}
              style={
                Object {
                  "cursor": "pointer",
                  "display": "flex",
                  "padding": "0px 5px",
                  "position": "relative",
                }
              }
            >
              <div
                className="css-1abq8k5"
              >
                <div
                  className="css-pnahsx"
                >
                  <svg
                    height={10}
                    width={10}
                  >
                    <polygon
                      className="css-l0fi0l"
                      points="0,0 0,10 10,5"
                    />
                  </svg>
                </div>
              </div>
              <span
                className="filetree-checkbox-container"
              >
                <div
                  style={
                    Object {
                      "color": "#777",
                      "display": "inline-block",
                      "verticalAlign": "top",
                    }
                  }
                >
                  <div>
                    <div
                      className="filetree-resource-row"
                      style={
                        Object {
                          "lineHeight": "24px",
                          "verticalAlign": "middle",
                        }
                      }
                      title="empty directory"
                    >
                      <svg
                        aria-hidden="true"
                        className="svg-inline--fa fa-folder fa-w-16 filetree-folder-icon"
                        data-icon="folder"
                        data-prefix="fas"
                        focusable="false"
                        role="img"
                        style={Object {}}
                        viewBox="0 0 512 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M464 128H272l-64-64H48C21.49 64 0 85.49 0 112v288c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V176c0-26.51-21.49-48-48-48z"
                          fill="currentColor"
                          style={Object {}}
                        />
                      </svg>
                      <div
                        className="filetree-directory-name"
                      >
                        empty directory
                      </div>
                    </div>
                  </div>
                </div>
              </span>
            </div>
            <div />
          </li>
        </ul>
      </div>
    </li>
  </ul>
</div>
`;
